--- a/pset3/pset3.tex
+++ b/pset3/pset3.tex
@@ -8,10 +8,10 @@
 
 \setlist[enumerate]{label=(\alph*)}
 
-\title{Pset \#}
+\title{Pset 3}
 
 \begin{document}
-\date{February 1, 2022 }
+\date{February 22, 2022 }
 \author{Darwin Do}
 
 \maketitle
@@ -26,5 +26,8 @@
 
 \newpage
 
-\section{Section 1}
+\section{Checking Connectivity}
+\begin{enumerate}
+    \item 
+\end{enumerate}
 \end{document}
