--- a/template/template.tex
+++ b/template/template.tex
@@ -5,6 +5,8 @@
 \usepackage{amsmath}
 \usepackage{array}
 \usepackage{amsthm}
+\usepackage[noend]{algpseudocode}
+\usepackage{listings}
 
 \setlist[enumerate]{label=(\alph*)}
 
